moved assets and bootstrap pastes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     volumes:
       - ./:/var/www/html/
       - ./config/000-default.conf:/etc/apache2/sites-available/000-default.conf
+    ports:
+      - 3000:80
